--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@vercel/og": "^0.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cookie": "^0.6.0",
+    "framer-motion": "^11.0.24",
+    "jotai": "^2.7.2",
+    "jotai-effect": "^0.6.0",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "react": "^18",
@@ -25,6 +29,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
